--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@fontsource/comfortaa": "^5.1.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "framer-motion": "^12.0.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.2",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1"
   },
