--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/comfortaa": "^5.1.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.7",
